Debuggage de l'applications, toutes les fonctionnalités attendues sont présentes (design à revoir si temps restant).